--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "node-sass src/styles.sass src/styles.css",
-    "dev": "node-sass src/styles.sass src/styles.css --recursive"
+    "dev": "node-sass src/styles.sass src/styles.css --recursive --watch"
   },
   "author": "Adam Gibbons",
   "license": "ISC",
